--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
                 <div class="image2">
                <img src="line2.svg" alt="" class="img_linha">
                 </div>
+                <div class="form">
                 <h2 class="titulo-formulario">Formulário de Cadastro</h2>
                     <p class="paragrafo-dados">Preencha seus dados</p>
                 <div class="formulario-dados">
@@ -83,6 +84,7 @@
                         <option value="SE">Sergipe</option>
                         <option value="TO">Tocantins</option>
                     </select>
+                </div>
                   </div>
                   <div class="formulario-conhecimento">
                     <p class="paragrafo-conhecimento">Conhecimento de Programação*</p>
@@ -142,7 +144,7 @@
                   
                     <div class="conhecimento">
                       <input type="checkbox" name="outros" id="outros" value="outros" class="input-conhecimento">
-                      <label for="outros">Outros</label>
+                      <label for="outros">Outras</label>
                     </div>
                   </div>
                   
