--- a/index.html
+++ b/index.html
@@ -162,10 +162,10 @@
                     <h1 class="projeto-titulo" id="projeto">O Projeto</h1>
                     <br>
                     <p class="projeto-paragrafo">Com o "novo normal" causado pela pandemia dos últimos anos, mais empresas no mundo todo têm aberto oportunidades no modelo Home Office.
-                        Alinhado a depriciação da moeda local, temos um alto índice de profissionais migrando para trabalhos em outros países.
+                        Alinhado a depreciação da moeda local, temos um alto índice de profissionais migrando para trabalhos em outros países.
                     </p>
                     <br>
-                    <p class="projeto-paragrafo projeto-paragrafo-negrito ">O projeto Netuno, idealizado pela Festers, tem por objetivo produzir os enteresses causados por recrutamento e turn over na
+                    <p class="projeto-paragrafo projeto-paragrafo-negrito ">O projeto Netuno, idealizado pela Fasters, tem por objetivo produzir os enteresses causados por recrutamento e turn over na
                         área de tecnologia, bem como gerar oportunidades de carreiras para novos profissionais.
                     </p>
                 </div>
@@ -179,8 +179,8 @@
                 <h1 class="titulo-problema">O Problema</h1>
                 <p>Falta de profissionais de TI no Mercado brasileiro: um problema que demanda atenção urgente.</p>
               </div>
-              <p class="texto-problema-profissionais">Estima-se que atualmente tenhamos um déficit de 408 mil postos de trabalho, com perdas se acomulando na casa dos R$167 bilhões, de acordo
-                com a Softex, uma organização social voltada ao fomento na área de TI.
+              <p class="texto-problema-profissionais">Estima-se que atualmente tenhamos um déficit de 408 mil postos de trabalho, com perdas se acumulando na casa dos R$167 bilhões, de acordo
+                com a Softex, uma organização social voltada ao fomento da área de TI.
               </p>
               <br>
               <p class="texto-problema-exterior">Um dos principais fatores dessa falta de profissionais é o êxodo de profissionais para o exterior.</p>
@@ -200,7 +200,7 @@
               <div class="containers-solucao">
               <h1 class="container-numero numero-tres">3</h1>
               <h2 class="container-titulo-tres">Experiencia Real</h2>
-              <p class="container-paragrafo-tres">Entendemos que somente as experiências reais poderam trazer a bagagem que a teoria não pode fazer.</p>
+              <p class="container-paragrafo-tres">Entendemos que somente as experiências reais poderão trazer a bagagem que a teoria não o pode fazer.</p>
             </div> 
           </div>
         </section>
